@@ -141,12 +141,13 @@ struct cmdtab {
 
 static struct cmdtab cmdtab[] = {
     {"%", f_comm},
-    {"35, 25",	bv_35_25},
+    {"35, 25", bv_35_25},
     {"3ptarb", f_3ptarb},
-    {"45, 45",	bv_45_45},
-    {"accept",	be_accept},
+    {"45, 45", bv_45_45},
+    {"B", cmd_blast},
+    {"accept", be_accept},
     {"adc", f_adc},
-    {"adjust",	cmd_adjust},
+    {"adjust", cmd_adjust},
     {"ae", cmd_aetview},
     {"ae2dir", cmd_ae2dir},
     {"aip", f_aip},
@@ -156,10 +157,10 @@ static struct cmdtab cmdtab[] = {
     {"area", f_area},
     {"arot", cmd_arot},
     {"attach", f_attach},
-    {"attr",	cmd_attr},
+    {"attr", cmd_attr},
     {"autoview", cmd_autoview},
-    {"B", cmd_blast},
     {"bev", f_bev},
+    {"binary", f_binary},
 #if 0
     {"import_body", cmd_import_body},
     {"export_body", cmd_export_body},
@@ -190,7 +191,6 @@ static struct cmdtab cmdtab[] = {
     {"d", cmd_erase},
     {"dall", cmd_erase_all},
     {"db_glob", cmd_mged_glob},
-    {"dbbinary", f_binary},
     {"dbconcat", cmd_concat},
     {"dbfind", cmd_find},
     {"dbip",	cmd_dbip},
